@@ -11,26 +11,24 @@
     <property name="source" value="1.5"/>
     <path id="Inpro.classpath">
         <pathelement location="bin"/>
-        <pathelement location="../../../../../../opt/java/sphinx4.jar"/>
-        <pathelement location="../../../../../../opt/java/oaa2.jar"/>
-        <pathelement location="../../../../../../opt/java/jmf.jar"/>
-        <pathelement location="../../../../../../opt/java/weka.jar"/>
-        <pathelement location="../../../../../../opt/java/drej.jar"/>
-        <pathelement location="../../../../../../opt/java/RM1_8gau_13dCep_16k_40mel_130Hz_6800Hz.jar"/>
-        <pathelement location="../../../../../../opt/java/TIDIGITS_8gau_13dCep_16k_40mel_130Hz_6800Hz.jar"/>
-        <pathelement location="../../../../../../opt/java/WSJ_8gau_13dCep_8kHz_31mel_200Hz_3500Hz.jar"/>
-        <pathelement location="../../../../../../opt/java/WSJ_8gau_13dCep_16k_40mel_130Hz_6800Hz.jar"/>
-        <pathelement location="../../../../../../opt/java/KCoRS_DE_8gau_13dCep_16k_40mel_130Hz_6800Hz.jar"/>
-        <pathelement location="../../../../../../usr/share/java/vecmath1.2.jar"/>
-        <pathelement location="../../../../../../opt/java/antlr-oaa.jar"/>
-        <pathelement location="../../../../../../usr/share/java/log4j-1.2.jar"/>
-        <pathelement location="../../../../../../opt/java/dom4j-1.5.2.jar"/>
-        <pathelement location="../../../../../../usr/share/java/backport-util-concurrent-2.2.jar"/>
-        <pathelement location="../../../../../../usr/share/java/junit.jar"/>
-        <pathelement location="../../../../../../opt/java/maryclient.jar"/>
-        <pathelement location="../../../../../../opt/java/voxforgeDE_8gau_13dCep_16k_40mel_130Hz_6800Hz.jar"/>
-        <pathelement location="res/broker.jar"/>
-        <pathelement location="../../../../../../opt/java/Cocolab_DE_8gau_13dCep_16k_40mel_130Hz_6800Hz.jar"/>
+		<pathelement location="res/jrtp_1.0a.jar"/>
+    	<pathelement location="/opt/java/sphinx4.jar"/>
+        <pathelement location="/opt/java/jsapi.jar"/>
+        <pathelement location="/opt/java/oaa2.jar"/>
+        <pathelement location="/opt/java/weka.jar"/>
+        <pathelement location="/opt/java/drej.jar"/>
+        <pathelement location="/usr/share/java/vecmath.jar"/>
+        <pathelement location="/opt/java/antlr-oaa.jar"/>
+        <pathelement location="/usr/share/java/log4j-1.2.jar"/>
+        <pathelement location="/opt/java/dom4j-1.5.2.jar"/>
+        <pathelement location="/usr/share/java/backport-util-concurrent-2.2.jar"/>
+        <pathelement location="/usr/share/java/junit.jar"/>
+        <pathelement location="/opt/java/maryclient.jar"/>
+        <pathelement location="/opt/pkg/mary-4.0.0/java/mary-common.jar"/>
+        <pathelement location="/opt/pkg/mary-4.0.0/java/mary-de.jar"/>
+        <pathelement location="/opt/pkg/mary-4.0.0/java/java-diff.jar"/>
+        <pathelement location="/opt/pkg/mary-4.0.0/java/Jampack.jar"/>
+        <pathelement location="/opt/pkg/sphinx/lib/Cocolab_DE_8gau_13dCep_16k_40mel_130Hz_6800Hz-r10144.jar"/>
     </path>
     <target name="init">
         <mkdir dir="bin"/>
