@@ -8,3 +8,7 @@ _____________________________________________________________
 _____________________________________________________________
 
 2010-07-29: initial release 0.6
+2010-09-13: release 0.7:
+	- intermittent changes to the code-base (quite a few)
+	- updated dependencies, apps, and examples in README
+	- 
